Added quiz html page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Welcome to the Timed Quiz</h1>
-            <a href="/script.html" id="startButton" class="button">Start</a>
+            <a href="/quiz.html" id="startButton" class="button">Start</a>
                 <a href="/highscores.html" id="highscoreButton" class="button">High Scores</a>
         </div>
     </div>
