--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Welcome to the Timed Quiz</h1>
-            <a href="/quiz.html" id="startButton" class="button">Start</a>
-                <a href="/highscores.html" id="highscoreButton" class="button">High Scores</a>
+            <a href="./quiz.html" id="startButton" class="button">Start</a>
+                <a href="./highscores.html" id="highscoreButton" class="button">High Scores</a>
         </div>
     </div>
     
