Added end.js file

--- a/end.html
+++ b/end.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>End of Quiz</title>
+    <title>End of Quiz!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div id="end" class="flex-center flex-column">
+            <!-- below shows your final score -->
+            <h1 id="finalScore">0</h1>
+            <form class="end-form-container">
+                <!-- below is where you enter your name for the scoreboard -->
+                <h2 id="end-text">Enter your name here:</h2>
+                <input type="text" name="name" id="username" placeholder="Enter Your Name">
+            <button class="button" id="saveScoreButton" type="submit" onclick="saveHighScore(event)">Save</button>
+            </form>
+            <a href="./game.html" class="button">Play Again</a>
+            <a href="./index.html" class="button">Home</a>
+        </div>
+    </div>
 </body>
 </html>
