--- a/end.html
+++ b/end.html
@@ -17,7 +17,7 @@
                 <input type="text" name="name" id="username" placeholder="Enter Your Name">
             <button class="button" id="saveScoreButton" type="submit" onclick="saveHighScore(event)">Save</button>
             </form>
-            <a href="./game.html" class="button">Play Again</a>
+            <a href="./quiz.html" class="button">Play Again</a>
             <a href="./index.html" class="button">Home</a>
         </div>
     </div>
