--- a/quiz.html
+++ b/quiz.html
@@ -26,6 +26,16 @@
                         0
                     </h1>
                 </div>
+                <!-- below is the timer -->
+                <p id="timer"> Time:</p>
+                    <p  id= "quizStart"></p>
+                <div id="quiz">
+                      </div>
+                      <div id= "countdown"></div>
+
+
+
+
             </div>
             <h1 id="question"> What is the answer to this question?</h1>
             <div class="choice-container">
