--- a/end.html
+++ b/end.html
@@ -21,5 +21,6 @@
             <a href="./index.html" class="button">Home</a>
         </div>
     </div>
+    <script src="end.js"></script>
 </body>
 </html>
